[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/popups/popup_base/PopupBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/common/button_big/ButtonBig.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/popups/popup_skill_selection/PopupSkillSelection.gd" type="Script" id=3]

[node name="PopupSkillSelection" instance=ExtResource( 1 )]
visible = false
script = ExtResource( 3 )

[node name="Title" parent="MargCont/Vbox" index="1"]
bbcode_text = "[center][color=blue][shake level=10]Skill"
text = "Skill"

[node name="Row1" type="HBoxContainer" parent="MargCont/Vbox/Content" index="0"]
margin_right = 656.0
margin_bottom = 383.0
custom_constants/separation = 32

[node name="DashInButton" parent="MargCont/Vbox/Content/Row1" index="0" instance=ExtResource( 2 )]
margin_right = 312.0
margin_bottom = 383.0
text = "[center]Dash to eat the small enemy"

[node name="DashOutButton" parent="MargCont/Vbox/Content/Row1" index="1" instance=ExtResource( 2 )]
margin_left = 344.0
margin_right = 656.0
margin_bottom = 383.0
text = "[center]Dash out from big enemy"

[node name="Row2" type="HBoxContainer" parent="MargCont/Vbox/Content" index="1"]
margin_top = 415.0
margin_right = 656.0
margin_bottom = 798.0
custom_constants/separation = 32

[node name="PuffButton" parent="MargCont/Vbox/Content/Row2" index="0" instance=ExtResource( 2 )]
margin_right = 312.0
margin_bottom = 383.0
text = "[center]Temporarily get bigger as self defence"

[node name="SummonButton" parent="MargCont/Vbox/Content/Row2" index="1" instance=ExtResource( 2 )]
margin_left = 344.0
margin_right = 656.0
margin_bottom = 383.0
text = "[center]Summon a minion that will feed you"
